fix text align in admin panel

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1119,6 +1119,9 @@ $secondary-color: hsl(0, 0%, 34%);
     font-size: 0.8rem;
     margin: 0 0 20px 0;
 }
+.containerAdminHomePannel p {
+    text-align: center;
+}
 .containerAdminItemAdd, .containerAdminItemEdit {
     display: flex;
     flex-wrap: wrap;
